--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Christmas Comes But Once a Year - 1 Year Project</title>
+    <title>CHRISTMAS COMES BUT ONCE A YEAR</title>
     <style>
         /* 1. 흰색 배경 및 중앙 정렬 세팅 */
         body { 
